fix: use Streams for ingestors